# atol-qc-raw-ont

./: .gitchangelog.rc  CHANGELOG.md  README.md  pyproject.toml
atol_qc_raw_ont/: __main__.py  process_step_logs.py
atol_qc_raw_ont/workflow/: Snakefile
atol_qc_raw_ont/workflow/rules/: single_tarfile.smk  stats.smk
atol_qc_raw_ont/workflow/scripts/: render_template.py
extras/: Makefile
